@@ -20,7 +20,6 @@ import org.springframework.test.web.servlet.ResultActions;
 import org.testcontainers.containers.PostgreSQLContainer;
 import org.testcontainers.junit.jupiter.Container;
 import org.testcontainers.junit.jupiter.Testcontainers;
-import org.hamcrest.Matchers;
 
 import java.time.LocalDateTime;
 import java.util.List;
@@ -88,7 +87,7 @@ class EventControllerIntegration2Test {
         // Verify event was saved to database
         List<Event> events = eventRepository.findAll();
         assertThat(events).hasSize(1);
-        Event savedEvent = events.get(0);
+        Event savedEvent = events.getFirst();
         assertThat(savedEvent.getEventType()).isEqualTo("screen_viewed");
         assertThat(savedEvent.getUserId()).isEqualTo("user_123");
         assertThat(savedEvent.getSessionId()).isEqualTo("session_456");
@@ -189,7 +188,7 @@ class EventControllerIntegration2Test {
 
         // Verify event was saved with special characters
         List<Event> events = eventRepository.findAll();
-        Event savedEvent = events.get(events.size() - 1); // Last added event
+        Event savedEvent = events.getLast(); // Last added event
         assertThat(savedEvent.getUserId()).isEqualTo("user_special!@#$%");
         assertThat(savedEvent.getProperties())
                 .containsEntry("category", "burger & pizza")
@@ -216,7 +215,7 @@ class EventControllerIntegration2Test {
         // Additional verification of database persistence
         List<Event> events = eventRepository.findAll();
         assertThat(events).isNotEmpty();
-        Event latestEvent = events.get(events.size() - 1);
+        Event latestEvent = events.getLast();
         assertThat(latestEvent.getEventType()).isEqualTo("order_placed");
         assertThat(latestEvent.getProperties()).containsEntry("orderId", "order_123").containsEntry("amount", 29.99);
     }
